# QuestChatPlexSDK-BS

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  assets_include.cmake  build.ps1  copy.ps1  createqmod.ps1  mod.json  mod.template.json  pullandanalyze.ps1  qpm.json  qpm.shared.json  restart-game.ps1  snippets.cpp  start-logging.ps1
.github/: FUNDING.yml
.github/actions/canary-ndk/: action.yml
.github/workflows/: build-ndk.yml  publish.yml
include/: assets.hpp  git_info.h  main.hpp
include/webp/dec/: alphai_dec.h  vp8_dec.h  vp8i_dec.h  vp8li_dec.h  webpi_dec.h
include/webp/dsp/: cpu.h  dsp.h  lossless.h  lossless_common.h  msa_macro.h  neon.h  quant.h  yuv.h
include/webp/enc/: backward_references_enc.h  cost_enc.h  histogram_enc.h  vp8i_enc.h  vp8li_enc.h
include/webp/utils/: bit_reader_utils.h  bit_writer_utils.h  color_cache_utils.h  endian_inl_utils.h  filters_utils.h  huffman_encode_utils.h  huffman_utils.h  quant_levels_dec_utils.h  quant_levels_utils.h  random_utils.h  rescaler_utils.h  thread_utils.h  utils.h
shared/: zzz_CP_SDK_X_Doc.hpp
shared/CP_SDK/: BuildConfig.hpp  CPConfig.hpp  ChatPlexSDK.hpp  ModuleBase.hpp
shared/CP_SDK/Animation/: AnimationControllerInstance.hpp  AnimationControllerManager.hpp  AnimationInfo.hpp  AnimationLoader.hpp  AnimationStateUpdater.hpp
shared/CP_SDK/Chat/: Service.hpp
shared/CP_SDK/Config/: JsonConfig.hpp
shared/CP_SDK/Logging/: BMBFLogger.hpp  ILogger.hpp  PaperLogger.hpp
shared/CP_SDK/Misc/: FastCancellationToken.hpp  Time.hpp
shared/CP_SDK/Network/: IWebClient.hpp  RateLimitInfo.hpp  WebClientUnity.hpp  WebContent.hpp  WebResponse.hpp
shared/CP_SDK/Pool/: IObjectPool.hpp  MTGenericPool.hpp  MTObjectPool.hpp  ObjectPool.hpp
shared/CP_SDK/UI/: FlowCoordinator.hpp  IFlowCoordinator.hpp  IModal.hpp  IScreen.hpp  IViewController.hpp  LoadingProgressBar.hpp  ModButton.hpp  ModMenu.hpp  ScreenSystem.hpp  Tooltip.hpp  UIIl2cpp.hpp  UISystem.hpp  ValueFormatters.hpp  ViewController.hpp
shared/CP_SDK/Unity/: EnhancedImage.hpp  FontManager.hpp  MTCoroutineStarter.hpp  MTMainThreadInvoker.hpp  MTThreadInvoker.hpp  MonoPtrHolder.hpp  Operators.hpp  PersistantSingleton.hpp  SpriteU.hpp  Texture2DU.hpp  TextureRaw.hpp
shared/CP_SDK/Utils/: Delegate.hpp  Event.hpp  Il2cpp.hpp  Json.hpp  MonoPtr.hpp  Task.hpp
shared/CP_SDK/XUI/: Templates.hpp  XUI.hpp  XUIColorInput.hpp  XUIDropdown.hpp  XUIFLayout.hpp  XUIGLayout.hpp  XUIHLayout.hpp  XUIHSpacer.hpp  XUIIconButton.hpp  XUIImage.hpp  XUIPrimaryButton.hpp  XUISecondaryButton.hpp  XUISlider.hpp  XUITabControl.hpp  XUIText.hpp  XUITextInput.hpp  XUITextSegmentedControl.hpp  XUIToggle.hpp  XUIVLayout.hpp  XUIVScrollView.hpp  XUIVSpacer.hpp  XUIVVList.hpp
shared/CP_SDK_BS/Game/: BeatMapsClient.hpp  LevelCompletionData.hpp  LevelData.hpp  LevelSelection.hpp  LevelType.hpp  Levels.hpp  Logic.hpp  PlayerAvatarPicture.hpp  Scoring.hpp  UserPlatform.hpp
shared/CP_SDK_BS/UI/: CP_SDK_UI_IViewControllerBridge.hpp  GameFont.hpp  HMUIIconSegmentedControl.hpp  HMUITextSegmentedControl.hpp  HMUIUIUtils.hpp  HMUIViewFlowCoordinator.hpp  IHMUIViewController.hpp  LevelDetail.hpp  ViewController.hpp
src/: main.cpp
src/CP_SDK/: CPConfig.cpp  ChatPlexSDK.cpp
src/CP_SDK/Animation/: AnimationControllerInstance.cpp  AnimationControllerManager.cpp  AnimationInfo.cpp  AnimationLoader.cpp  AnimationStateUpdater.cpp
src/CP_SDK/Chat/: Service.cpp
src/CP_SDK/Config/: JsonConfig.cpp
src/CP_SDK/Logging/: BMBFLogger.cpp  ILogger.cpp  PaperLogger.cpp
src/CP_SDK/Misc/: FastCancellationToken.cpp  Time.cpp
src/CP_SDK/Network/: WebClientUnity.cpp  WebContent.cpp  WebResponse.cpp
src/CP_SDK/UI/: FlowCoordinator.cpp  IFlowCoordinator.cpp  IModal.cpp  IScreen.cpp  IViewController.cpp  LoadingProgressBar.cpp  ModButton.cpp  ModMenu.cpp  ScreenSystem.cpp  Tooltip.cpp  UISystem.cpp  ValueFormatters.cpp  ViewController.cpp
src/CP_SDK/Unity/: EnhancedImage.cpp  FontManager.cpp  MTCoroutineStarter.cpp  MTMainThreadInvoker.cpp  MTThreadInvoker.cpp  MonoPtrHolder.cpp  SpriteU.cpp  Texture2DU.cpp  TextureRaw.cpp
src/CP_SDK/Utils/: Il2cpp.cpp  Json.cpp
src/CP_SDK/XUI/: Templates.cpp
src/CP_SDK_BS/Game/: BeatMapsClient.cpp  LevelCompletionData.cpp  LevelData.cpp  LevelSelection.cpp  Levels.cpp  Logic.cpp  PlayerAvatarPicture.cpp  Scoring.cpp  UserPlatform.cpp
src/CP_SDK_BS/UI/: CP_SDK_UI_IViewControllerBridge.cpp  GameFont.cpp  HMUIIconSegmentedControl.cpp  HMUITextSegmentedControl.cpp  HMUIUIUtils.cpp  HMUIViewFlowCoordinator.cpp  IHMUIViewController.cpp  LevelDetail.cpp  ViewController.cpp
src/webp/dec/: alpha_dec.c  buffer_dec.c  frame_dec.c  idec_dec.c  io_dec.c  quant_dec.c  tree_dec.c  vp8_dec.c  vp8l_dec.c  webp_dec.c
src/webp/demux/: anim_decode.c  demux.c
src/webp/dsp/: alpha_processing.c  alpha_processing_mips_dsp_r2.c  alpha_processing_neon.c  alpha_processing_sse2.c  alpha_processing_sse41.c  cost.c  cost_mips32.c  cost_mips_dsp_r2.c  cost_neon.c  cost_sse2.c  cpu.c  dec.c  dec_clip_tables.c  dec_mips32.c  dec_mips_dsp_r2.c  dec_msa.c  dec_neon.c  dec_sse2.c  dec_sse41.c  enc.c  enc_mips32.c  enc_mips_dsp_r2.c  enc_msa.c  enc_neon.c  enc_sse2.c  enc_sse41.c  filters.c  filters_mips_dsp_r2.c  filters_msa.c  filters_neon.c  filters_sse2.c  lossless.c  lossless_enc.c  lossless_enc_mips32.c  lossless_enc_mips_dsp_r2.c  lossless_enc_msa.c  lossless_enc_neon.c  lossless_enc_sse2.c  lossless_enc_sse41.c  lossless_mips_dsp_r2.c  (+24 more)
src/webp/enc/: alpha_enc.c  analysis_enc.c  backward_references_cost_enc.c  backward_references_enc.c  config_enc.c  cost_enc.c  filter_enc.c  (+16 more)
(+249 files in other folders)
